More documentation and CI checks
